# crusoe

./: Cargo.toml  README.md  crusoe.toml
src/: actions.rs  agent.rs  config.rs  goods.rs  lib.rs  simulation.rs  stock.rs  valuation.rs
src/learning/: action.rs  agent_state.rs  history.rs  learning_agent.rs  mod.rs  policy.rs  q_table.rs  reward.rs  serde_utils.rs  tabular_rl.rs
