[package]
name = "crusoe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crusoe"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
enum_dispatch = "0.3.13"
rand = { version = "0.9.1", features = ["alloc"] }
itertools = "0.14.0"
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
toml = "0.8.23"
tuple-conv = "1.0.1"
